remove form text alignment, margin, fixed width

--- a/frontend/src/css/parts/login-form.scss
+++ b/frontend/src/css/parts/login-form.scss
@@ -1,12 +1,5 @@
 
 form{
-    margin:auto;
-    width:30%;
-    text-align:center;
-
-    .linkText {
-        text-align: left;
-    }
 
     button {
         width: 100%
